Fix margin spacing for the EnergyTable Component

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -36,6 +36,7 @@
 .energy-table {
   border: 1px solid black;
   margin-left: 15px;
+  margin-top: 2px;
 
   min-height: 100px;
   max-height: 110px;
